@@ -199,7 +199,7 @@ key_r = rumblepak
 key_return = start
 key_c = a
 key_x = b
-key_a = l
+key_q = l
 key_z = r
 key_m = mempak
 key_space = z
