@@ -109,10 +109,6 @@ lstick_down = (down)
 east_button = (2)
 
 [atari5200]
-lstick_left = left
-lstick_right = right
-lstick_up = up
-lstick_down = down
 dpad_left = left
 dpad_right = right
 dpad_up = up
@@ -131,10 +127,6 @@ north_button = (1)
 east_button = (2)
 
 [atari7800]
-lstick_left = left
-lstick_right = right
-lstick_up = up
-lstick_down = down
 dpad_left = left
 dpad_right = right
 dpad_up = up
